Enhance pattern visualization and documentation- Fixed pattern selection in interactive dashboard- Updated VisualizationConfig exposure in __init__.py files- Improved example notebook with comprehensive pattern analysis- Fixed data handling for multi-timeframe analysis- Updated requirements.txt to match setup.py- Added proper error handling for pattern detection- Enhanced documentation with usage examplesTechnical Changes:- Fixed visibility settings in pattern selection- Added proper base trace tracking- Improved pattern marker positioning- Enhanced pattern distribution visualization- Updated volume profile analysis

--- a/docs/examples/01_basic_patterns.ipynb
+++ b/docs/examples/01_basic_patterns.ipynb
@@ -14195,7 +14195,7 @@
          "mode": "markers",
          "name": "abandoned_baby (Bullish)",
          "type": "scatter",
-         "visible": false,
+         "visible": true,
          "x": [
           "2023-02-27T00:00:00",
           "2023-05-05T00:00:00"
@@ -14216,7 +14216,7 @@
          "mode": "markers",
          "name": "dark_cloud_cover",
          "type": "scatter",
-         "visible": false,
+         "visible": true,
          "x": [
           "2023-03-09T00:00:00",
           "2023-04-11T00:00:00",
@@ -14243,7 +14243,7 @@
          "mode": "markers",
          "name": "doji",
          "type": "scatter",
-         "visible": false,
+         "visible": true,
          "x": [
           "2023-01-09T00:00:00",
           "2023-02-16T00:00:00",
@@ -14320,7 +14320,7 @@
          "mode": "markers",
          "name": "eight_new_price_lines (Bullish)",
          "type": "scatter",
-         "visible": false,
+         "visible": true,
          "x": [
           "2023-06-30T00:00:00"
          ],
@@ -14339,7 +14339,7 @@
          "mode": "markers",
          "name": "engulfing (Bullish)",
          "type": "scatter",
-         "visible": false,
+         "visible": true,
          "x": [
           "2023-01-13T00:00:00",
           "2023-02-07T00:00:00",
@@ -14372,7 +14372,7 @@
          "mode": "markers",
          "name": "engulfing (Bearish)",
          "type": "scatter",
-         "visible": false,
+         "visible": true,
          "x": [
           "2023-03-09T00:00:00",
           "2023-04-11T00:00:00",
@@ -14409,7 +14409,7 @@
          "mode": "markers",
          "name": "evening_star",
          "type": "scatter",
-         "visible": false,
+         "visible": true,
          "x": [
           "2023-02-21T00:00:00",
           "2023-05-12T00:00:00",
@@ -14432,7 +14432,7 @@
          "mode": "markers",
          "name": "falling_three_methods",
          "type": "scatter",
-         "visible": false,
+         "visible": true,
          "x": [
           "2023-10-19T00:00:00"
          ],
@@ -14451,7 +14451,7 @@
          "mode": "markers",
          "name": "hammer",
          "type": "scatter",
-         "visible": false,
+         "visible": true,
          "x": [
           "2023-01-12T00:00:00",
           "2023-01-25T00:00:00",
@@ -14492,7 +14492,7 @@
          "mode": "markers",
          "name": "harami (Bullish)",
          "type": "scatter",
-         "visible": false,
+         "visible": true,
          "x": [
           "2023-02-22T00:00:00",
           "2023-03-08T00:00:00",
@@ -14527,7 +14527,7 @@
          "mode": "markers",
          "name": "harami (Bearish)",
          "type": "scatter",
-         "visible": false,
+         "visible": true,
          "x": [
           "2023-02-06T00:00:00",
           "2023-02-08T00:00:00",
@@ -14558,7 +14558,7 @@
          "mode": "markers",
          "name": "kicking_pattern (Bullish)",
          "type": "scatter",
-         "visible": false,
+         "visible": true,
          "x": [
           "2023-02-27T00:00:00",
           "2023-03-29T00:00:00",
@@ -14581,7 +14581,7 @@
          "mode": "markers",
          "name": "kicking_pattern (Bearish)",
          "type": "scatter",
-         "visible": false,
+         "visible": true,
          "x": [
           "2023-05-23T00:00:00",
           "2023-12-18T00:00:00"
@@ -14602,7 +14602,7 @@
          "mode": "markers",
          "name": "marubozu",
          "type": "scatter",
-         "visible": false,
+         "visible": true,
          "x": [
           "2023-04-27T00:00:00",
           "2023-06-22T00:00:00"
@@ -14623,7 +14623,7 @@
          "mode": "markers",
          "name": "morning_star",
          "type": "scatter",
-         "visible": false,
+         "visible": true,
          "x": [
           "2023-03-24T00:00:00",
           "2023-05-17T00:00:00",
@@ -14652,7 +14652,7 @@
          "mode": "markers",
          "name": "piercing_pattern",
          "type": "scatter",
-         "visible": false,
+         "visible": true,
          "x": [
           "2023-01-31T00:00:00",
           "2023-02-07T00:00:00",
@@ -14675,7 +14675,7 @@
          "mode": "markers",
          "name": "shooting_star",
          "type": "scatter",
-         "visible": false,
+         "visible": true,
          "x": [
           "2023-01-09T00:00:00",
           "2023-02-16T00:00:00",
@@ -14716,7 +14716,7 @@
          "mode": "markers",
          "name": "spinning_top",
          "type": "scatter",
-         "visible": false,
+         "visible": true,
          "x": [
           "2023-05-22T00:00:00",
           "2023-05-25T00:00:00",
@@ -14749,7 +14749,7 @@
          "mode": "markers",
          "name": "three_inside (Bullish)",
          "type": "scatter",
-         "visible": false,
+         "visible": true,
          "x": [
           "2023-02-22T00:00:00",
           "2023-03-23T00:00:00",
@@ -14780,7 +14780,7 @@
          "mode": "markers",
          "name": "three_inside (Bearish)",
          "type": "scatter",
-         "visible": false,
+         "visible": true,
          "x": [
           "2023-02-08T00:00:00",
           "2023-07-03T00:00:00",
@@ -14805,7 +14805,7 @@
          "mode": "markers",
          "name": "three_outside (Bullish)",
          "type": "scatter",
-         "visible": false,
+         "visible": true,
          "x": [
           "2023-01-13T00:00:00",
           "2023-03-13T00:00:00"
@@ -14826,7 +14826,7 @@
          "mode": "markers",
          "name": "three_outside (Bearish)",
          "type": "scatter",
-         "visible": false,
+         "visible": true,
          "x": [
           "2023-03-09T00:00:00",
           "2023-04-11T00:00:00",
@@ -14857,7 +14857,7 @@
          "mode": "markers",
          "name": "thrust_pattern (Bullish)",
          "type": "scatter",
-         "visible": false,
+         "visible": true,
          "x": [
           "2023-01-13T00:00:00",
           "2023-01-26T00:00:00",
@@ -14900,7 +14900,7 @@
          "mode": "markers",
          "name": "thrust_pattern (Bearish)",
          "type": "scatter",
-         "visible": false,
+         "visible": true,
          "x": [
           "2023-01-05T00:00:00",
           "2023-06-21T00:00:00",
@@ -14923,7 +14923,7 @@
          "mode": "markers",
          "name": "two_rabbits (Bearish)",
          "type": "scatter",
-         "visible": false,
+         "visible": true,
          "x": [
           "2023-07-18T00:00:00"
          ],
@@ -15834,31 +15834,31 @@
                true,
                true,
                true,
-               false,
-               false,
-               false,
-               false,
-               false,
-               false,
-               false,
-               false,
-               false,
-               false,
-               false,
-               false,
-               false,
-               false,
-               false,
-               false,
-               false,
-               false,
-               false,
-               false,
-               false,
-               false,
-               false,
-               false,
-               false
+               true,
+               true,
+               true,
+               true,
+               true,
+               true,
+               true,
+               true,
+               true,
+               true,
+               true,
+               true,
+               true,
+               true,
+               true,
+               true,
+               true,
+               true,
+               true,
+               true,
+               true,
+               true,
+               true,
+               true,
+               true
               ]
              }
             ],
