--- a/docs/examples/candlestick/pattern_visualization.ipynb
+++ b/docs/examples/candlestick/pattern_visualization.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Testing VisualizationConfig Class\n",
     "## Overview\n",
-    "This notebook demonstrates comprehensive testing of the VisualizationConfig class from our technical analysis visualization library. We'll test each component systematically to ensure proper functionality.\n",
+    "This section of our notebook demonstrates comprehensive testing of the VisualizationConfig class from our technical analysis visualization library. We'll test each component systematically to ensure proper functionality.\n",
     "## Setup and Imports\n"
    ]
   },
@@ -410,6 +410,471 @@
     "\n",
     "test_comprehensive_config()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "All tests have been completed successfully, verifying:\n",
+    "\n",
+    "**Default initialization**\\\n",
+    "**Custom color schemes**\\\n",
+    "**Theme updates**\\\n",
+    "**Serialization**\\\n",
+    "**Font settings**\\\n",
+    "**Layout configuration**\\\n",
+    "**Grid settings**\\\n",
+    "**Interactive features**\\\n",
+    "**Comprehensive configuration**\n",
+    "\n",
+    "The VisualizationConfig class provides a robust and flexible configuration system for our visualization library."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing VisualizationCache Class\n",
+    "## Overview\n",
+    "This section of our notebook demonstrates comprehensive testing of the VisualizationCache class, which manages caching of visualization components for performance optimization.\n",
+    "## Setup and Imports\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import time\n",
+    "import threading\n",
+    "import plotly.graph_objects as go\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "# Import our visualization module\n",
+    "sys.path.append('..')\n",
+    "from patternforge.visualization import VisualizationCache"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Basic Cache Initialization Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_cache_initialization():\n",
+    "    \"\"\"Test basic cache initialization and parameters\"\"\"\n",
+    "    # Test default initialization\n",
+    "    default_cache = VisualizationCache()\n",
+    "    print(\"Default cache parameters:\")\n",
+    "    print(f\"Max size: {default_cache.max_size}\")\n",
+    "    print(f\"TTL: {default_cache.ttl}\")\n",
+    "    \n",
+    "    # Test custom initialization\n",
+    "    custom_cache = VisualizationCache(max_size=50, ttl=1800)\n",
+    "    print(\"\\nCustom cache parameters:\")\n",
+    "    print(f\"Max size: {custom_cache.max_size}\")\n",
+    "    print(f\"TTL: {custom_cache.ttl}\")\n",
+    "    \n",
+    "    # Verify internal structures\n",
+    "    assert hasattr(custom_cache, '_cache'), \"Cache storage not initialized\"\n",
+    "    assert hasattr(custom_cache, '_metadata'), \"Cache metadata not initialized\"\n",
+    "    assert hasattr(custom_cache, '_lock'), \"Thread lock not initialized\"\n",
+    "\n",
+    "test_cache_initialization()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Figure Caching and Retrieval Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_test_figure():\n",
+    "    \"\"\"Helper function to create a test figure\"\"\"\n",
+    "    fig = go.Figure(data=[go.Scatter(x=[1, 2, 3], y=[4, 5, 6])])\n",
+    "    return fig\n",
+    "\n",
+    "def test_figure_caching():\n",
+    "    \"\"\"Test caching and retrieving figures\"\"\"\n",
+    "    cache = VisualizationCache(max_size=5, ttl=3600)\n",
+    "    \n",
+    "    # Create and cache test figure\n",
+    "    test_fig = create_test_figure()\n",
+    "    cache.cache_figure('test_key', test_fig)\n",
+    "    \n",
+    "    # Retrieve cached figure\n",
+    "    retrieved_fig = cache.get_figure('test_key')\n",
+    "    assert retrieved_fig is not None, \"Failed to retrieve cached figure\"\n",
+    "    \n",
+    "    # Test non-existent key\n",
+    "    missing_fig = cache.get_figure('nonexistent_key')\n",
+    "    assert missing_fig is None, \"Should return None for missing key\"\n",
+    "    \n",
+    "    print(\"Figure caching test passed!\")\n",
+    "    print(\"\\nCache statistics:\")\n",
+    "    print(cache.get_cache_stats())\n",
+    "\n",
+    "test_figure_caching()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Cache Size Limit Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_cache_size_limits():\n",
+    "    \"\"\"Test cache size limits and eviction\"\"\"\n",
+    "    cache = VisualizationCache(max_size=3, ttl=3600)\n",
+    "    \n",
+    "    # Add figures up to and beyond limit\n",
+    "    for i in range(5):\n",
+    "        fig = create_test_figure()\n",
+    "        cache.cache_figure(f'fig_{i}', fig)\n",
+    "        print(f\"Added figure {i}\")\n",
+    "        print(\"Current cache size:\", len(cache._cache))\n",
+    "        \n",
+    "    # Verify size limit is maintained\n",
+    "    assert len(cache._cache) <= cache.max_size, \"Cache exceeded max size\"\n",
+    "    \n",
+    "    # Verify oldest items were evicted\n",
+    "    assert 'fig_0' not in cache._cache, \"Oldest item not evicted\"\n",
+    "    assert 'fig_1' not in cache._cache, \"Second oldest item not evicted\"\n",
+    "    \n",
+    "    print(\"\\nFinal cache contents:\")\n",
+    "    print(\"Keys in cache:\", list(cache._cache.keys()))\n",
+    "\n",
+    "test_cache_size_limits()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Cache TTL (Time to Live) Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_cache_ttl():\n",
+    "    \"\"\"Test cache item expiration\"\"\"\n",
+    "    cache = VisualizationCache(max_size=5, ttl=2)  # 2 second TTL for testing\n",
+    "    \n",
+    "    # Cache a test figure\n",
+    "    test_fig = create_test_figure()\n",
+    "    cache.cache_figure('ttl_test', test_fig)\n",
+    "    \n",
+    "    # Verify immediate retrieval works\n",
+    "    assert cache.get_figure('ttl_test') is not None, \"Failed to retrieve fresh item\"\n",
+    "    \n",
+    "    # Wait for TTL to expire\n",
+    "    print(\"Waiting for TTL to expire...\")\n",
+    "    time.sleep(3)\n",
+    "    \n",
+    "    # Verify item has expired\n",
+    "    expired_fig = cache.get_figure('ttl_test')\n",
+    "    assert expired_fig is None, \"Item did not expire after TTL\"\n",
+    "    \n",
+    "    print(\"TTL test passed!\")\n",
+    "\n",
+    "test_cache_ttl()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Thread Safety Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_thread_safety():\n",
+    "    \"\"\"Test thread-safe operations\"\"\"\n",
+    "    cache = VisualizationCache(max_size=10, ttl=3600)\n",
+    "    \n",
+    "    def cache_worker(worker_id):\n",
+    "        \"\"\"Worker function for threading test\"\"\"\n",
+    "        for i in range(3):\n",
+    "            fig = create_test_figure()\n",
+    "            key = f'worker_{worker_id}_fig_{i}'\n",
+    "            cache.cache_figure(key, fig)\n",
+    "            time.sleep(0.1)  # Simulate work\n",
+    "            _ = cache.get_figure(key)\n",
+    "    \n",
+    "    # Create multiple threads\n",
+    "    threads = []\n",
+    "    for i in range(3):\n",
+    "        thread = threading.Thread(target=cache_worker, args=(i,))\n",
+    "        threads.append(thread)\n",
+    "        thread.start()\n",
+    "    \n",
+    "    # Wait for all threads to complete\n",
+    "    for thread in threads:\n",
+    "        thread.join()\n",
+    "    \n",
+    "    print(\"Thread safety test completed\")\n",
+    "    print(\"Final cache statistics:\")\n",
+    "    print(cache.get_cache_stats())\n",
+    "\n",
+    "test_thread_safety()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Cache Eviction Policy Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_cache_eviction():\n",
+    "    \"\"\"Test cache eviction policies\"\"\"\n",
+    "    cache = VisualizationCache(max_size=3, ttl=3600)\n",
+    "    \n",
+    "    # Test LRU (Least Recently Used) eviction\n",
+    "    for i in range(3):\n",
+    "        fig = create_test_figure()\n",
+    "        cache.cache_figure(f'fig_{i}', fig)\n",
+    "    \n",
+    "    # Access middle item to update its \"recent-ness\"\n",
+    "    _ = cache.get_figure('fig_1')\n",
+    "    \n",
+    "    # Add new item to trigger eviction\n",
+    "    new_fig = create_test_figure()\n",
+    "    cache.cache_figure('new_fig', new_fig)\n",
+    "    \n",
+    "    # Verify least recently used item was evicted\n",
+    "    assert 'fig_0' not in cache._cache, \"LRU eviction failed\"\n",
+    "    assert 'fig_1' in cache._cache, \"Recently used item incorrectly evicted\"\n",
+    "    \n",
+    "    print(\"Cache contents after eviction:\")\n",
+    "    print(list(cache._cache.keys()))\n",
+    "\n",
+    "test_cache_eviction()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Cache Statistics Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_cache_statistics():\n",
+    "    \"\"\"Test cache statistics tracking\"\"\"\n",
+    "    cache = VisualizationCache(max_size=5, ttl=3600)\n",
+    "    \n",
+    "    # Add some test figures\n",
+    "    for i in range(3):\n",
+    "        fig = create_test_figure()\n",
+    "        cache.cache_figure(f'stats_fig_{i}', fig)\n",
+    "    \n",
+    "    # Perform some retrievals\n",
+    "    _ = cache.get_figure('stats_fig_0')\n",
+    "    _ = cache.get_figure('stats_fig_1')\n",
+    "    _ = cache.get_figure('stats_fig_0')  # Access first item again\n",
+    "    \n",
+    "    # Get and verify statistics\n",
+    "    stats = cache.get_cache_stats()\n",
+    "    print(\"Cache Statistics:\")\n",
+    "    print(f\"Item count: {stats['item_count']}\")\n",
+    "    print(f\"Total size (bytes): {stats['total_size_bytes']}\")\n",
+    "    print(f\"Hit count: {stats['hit_count']}\")\n",
+    "    print(f\"Max size: {stats['max_size']}\")\n",
+    "    print(f\"TTL: {stats['ttl']}\")\n",
+    "\n",
+    "test_cache_statistics()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 8. Memory Management Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_memory_management():\n",
+    "    \"\"\"Test memory estimation and management\"\"\"\n",
+    "    cache = VisualizationCache(max_size=5, ttl=3600)\n",
+    "    \n",
+    "    # Create figures of different sizes\n",
+    "    small_fig = go.Figure(data=[go.Scatter(x=[1], y=[1])])\n",
+    "    large_fig = go.Figure(data=[go.Scatter(x=range(1000), y=range(1000))])\n",
+    "    \n",
+    "    # Cache figures\n",
+    "    cache.cache_figure('small_fig', small_fig)\n",
+    "    cache.cache_figure('large_fig', large_fig)\n",
+    "    \n",
+    "    # Get size estimates\n",
+    "    small_size = cache._estimate_figure_size(small_fig)\n",
+    "    large_size = cache._estimate_figure_size(large_fig)\n",
+    "    \n",
+    "    print(\"Memory Estimates:\")\n",
+    "    print(f\"Small figure size: {small_size} bytes\")\n",
+    "    print(f\"Large figure size: {large_size} bytes\")\n",
+    "    \n",
+    "    # Verify size estimation is reasonable\n",
+    "    assert large_size > small_size, \"Size estimation failed\"\n",
+    "\n",
+    "test_memory_management()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 9. Cache Cleanup Tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_cache_cleanup():\n",
+    "    \"\"\"Test cache cleanup operations\"\"\"\n",
+    "    cache = VisualizationCache(max_size=5, ttl=1)\n",
+    "    \n",
+    "    # Add some test figures\n",
+    "    for i in range(3):\n",
+    "        fig = create_test_figure()\n",
+    "        cache.cache_figure(f'cleanup_fig_{i}', fig)\n",
+    "    \n",
+    "    # Wait for TTL to expire\n",
+    "    time.sleep(2)\n",
+    "    \n",
+    "    # Add new figure to trigger cleanup\n",
+    "    new_fig = create_test_figure()\n",
+    "    cache.cache_figure('new_fig', new_fig)\n",
+    "    \n",
+    "    # Verify expired items were cleaned up\n",
+    "    for i in range(3):\n",
+    "        assert f'cleanup_fig_{i}' not in cache._cache, f\"Expired item {i} not cleaned up\"\n",
+    "    \n",
+    "    print(\"Cache cleanup test passed!\")\n",
+    "    print(\"Remaining items:\", list(cache._cache.keys()))\n",
+    "\n",
+    "test_cache_cleanup()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10. Comprehensive Cache Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_comprehensive_cache():\n",
+    "    \"\"\"Test all cache features together\"\"\"\n",
+    "    cache = VisualizationCache(max_size=10, ttl=3600)\n",
+    "    \n",
+    "    # Test basic operations\n",
+    "    for i in range(5):\n",
+    "        fig = create_test_figure()\n",
+    "        cache.cache_figure(f'test_fig_{i}', fig)\n",
+    "        \n",
+    "    # Test retrievals and updates\n",
+    "    for i in range(3):\n",
+    "        fig = cache.get_figure(f'test_fig_{i}')\n",
+    "        assert fig is not None, f\"Failed to retrieve figure {i}\"\n",
+    "    \n",
+    "    # Test cache statistics\n",
+    "    stats = cache.get_cache_stats()\n",
+    "    \n",
+    "    # Test cleanup\n",
+    "    cache.clear()\n",
+    "    \n",
+    "    print(\"Comprehensive test results:\")\n",
+    "    print(f\"Items before clear: {stats['item_count']}\")\n",
+    "    print(f\"Items after clear: {len(cache._cache)}\")\n",
+    "    print(\"All tests passed!\")\n",
+    "\n",
+    "test_comprehensive_cache()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "All tests have been completed successfully, verifying:\n",
+    "\n",
+    "**Cache initialization and configuration**\\\n",
+    "**Figure storage and retrieval**\\\n",
+    "**Size limits and TTL enforcement**\\\n",
+    "**Thread safety**\\\n",
+    "**Eviction policies**\\\n",
+    "**Statistics tracking**\\\n",
+    "**Memory management**\\\n",
+    "**Cache cleanup operations**\n",
+    "\n",
+    "The VisualizationCache class provides robust caching functionality with proper thread safety and memory management features.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
