Tried fixing module not found error

--- a/docs/examples/candlestick/pattern_visualization.ipynb
+++ b/docs/examples/candlestick/pattern_visualization.ipynb
@@ -95,6 +95,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Added to path: c:\\Apoorv\\Projects\\patternforge\n",
+      "Import error: No module named 'patternforge'\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "\n",
+    "# Navigate up three levels to the project root\n",
+    "project_root = os.path.abspath(os.path.join(os.getcwd(), '..', '..', '..'))\n",
+    "sys.path.append(project_root)\n",
+    "\n",
+    "print(\"Added to path:\", project_root)\n",
+    "\n",
+    "# Now try importing again\n",
+    "try:\n",
+    "    from patternforge.visualization import (\n",
+    "        VisualizationConfig,\n",
+    "        VisualizationCache,\n",
+    "        BaseVisualizationSettings\n",
+    "    )\n",
+    "    print(\"Successfully imported visualization classes!\")\n",
+    "except ImportError as e:\n",
+    "    print(\"Import error:\", str(e))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
