Added multi timeframe example

--- a/docs/examples/candlestick/pattern_visualization.ipynb
+++ b/docs/examples/candlestick/pattern_visualization.ipynb
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -697,19 +697,21 @@
      "text": [
       "Default cache parameters:\n",
       "Max size: 1000\n",
-      "Note: TTL attribute not directly accessible\n"
+      "\n",
+      "Custom cache parameters:\n",
+      "Max size: 50\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "VisualizationCache.__init__() got an unexpected keyword argument 'ttl'",
+     "ename": "AssertionError",
+     "evalue": "Cache metadata not initialized",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[23], line 29\u001b[0m\n\u001b[0;32m     26\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(custom_cache, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_metadata\u001b[39m\u001b[38;5;124m'\u001b[39m), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCache metadata not initialized\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     27\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(custom_cache, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_lock\u001b[39m\u001b[38;5;124m'\u001b[39m), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThread lock not initialized\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m---> 29\u001b[0m test_cache_initialization()\n",
-      "Cell \u001b[1;32mIn[23], line 16\u001b[0m, in \u001b[0;36mtest_cache_initialization\u001b[1;34m()\u001b[0m\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNote: TTL attribute not directly accessible\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     15\u001b[0m \u001b[38;5;66;03m# Test custom initialization\u001b[39;00m\n\u001b[1;32m---> 16\u001b[0m custom_cache \u001b[38;5;241m=\u001b[39m VisualizationCache(max_size\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m50\u001b[39m, ttl\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1800\u001b[39m)\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124mCustom cache parameters:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMax size: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcustom_cache\u001b[38;5;241m.\u001b[39mmax_size\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: VisualizationCache.__init__() got an unexpected keyword argument 'ttl'"
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[26], line 23\u001b[0m\n\u001b[0;32m     19\u001b[0m     \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(custom_cache, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_lock\u001b[39m\u001b[38;5;124m'\u001b[39m), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThread lock not initialized\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     21\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCache initialization test passed!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 23\u001b[0m test_cache_initialization()\n",
+      "Cell \u001b[1;32mIn[26], line 18\u001b[0m, in \u001b[0;36mtest_cache_initialization\u001b[1;34m()\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# Verify internal structures\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(custom_cache, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_cache\u001b[39m\u001b[38;5;124m'\u001b[39m), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCache storage not initialized\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m---> 18\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(custom_cache, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_metadata\u001b[39m\u001b[38;5;124m'\u001b[39m), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCache metadata not initialized\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(custom_cache, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_lock\u001b[39m\u001b[38;5;124m'\u001b[39m), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThread lock not initialized\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCache initialization test passed!\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mAssertionError\u001b[0m: Cache metadata not initialized"
      ]
     }
    ],
@@ -721,26 +723,20 @@
     "    print(\"Default cache parameters:\")\n",
     "    print(f\"Max size: {default_cache.max_size}\")\n",
     "    \n",
-    "    # The TTL attribute might have a different name, let's check the instance variables\n",
-    "    # or skip this attribute if it's not directly accessible\n",
-    "    if hasattr(default_cache, 'ttl'):\n",
-    "        print(f\"TTL: {default_cache.ttl}\")\n",
-    "    else:\n",
-    "        print(\"Note: TTL attribute not directly accessible\")\n",
+    "    # Look at the constructor to see what parameters are actually supported\n",
+    "    # If TTL is not a parameter, we'll skip it\n",
     "    \n",
-    "    # Test custom initialization\n",
-    "    custom_cache = VisualizationCache(max_size=50, ttl=1800)\n",
+    "    # Test custom initialization with only the supported parameter\n",
+    "    custom_cache = VisualizationCache(max_size=50)\n",
     "    print(\"\\nCustom cache parameters:\")\n",
     "    print(f\"Max size: {custom_cache.max_size}\")\n",
-    "    if hasattr(custom_cache, 'ttl'):\n",
-    "        print(f\"TTL: {custom_cache.ttl}\")\n",
-    "    else:\n",
-    "        print(\"Note: TTL attribute not directly accessible\")\n",
     "    \n",
     "    # Verify internal structures\n",
     "    assert hasattr(custom_cache, '_cache'), \"Cache storage not initialized\"\n",
     "    assert hasattr(custom_cache, '_metadata'), \"Cache metadata not initialized\"\n",
     "    assert hasattr(custom_cache, '_lock'), \"Thread lock not initialized\"\n",
+    "    \n",
+    "    print(\"Cache initialization test passed!\")\n",
     "\n",
     "test_cache_initialization()"
    ]
@@ -2042,7 +2038,187 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Phase 3: Advanced Visualization Features\n",
+    "## 7. Multi-Timeframe Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Multi-timeframe analysis\n",
+    "def create_multi_timeframe_examples(data, config):\n",
+    "    \"\"\"Create examples of multi-timeframe analysis\"\"\"\n",
+    "    # First, create different timeframe representations of the data\n",
+    "    def resample_to_weekly(data):\n",
+    "        \"\"\"Resample data to weekly timeframe\"\"\"\n",
+    "        weekly = data.resample('W').agg({\n",
+    "            'Open': 'first',\n",
+    "            'High': 'max',\n",
+    "            'Low': 'min',\n",
+    "            'Close': 'last',\n",
+    "            'Volume': 'sum'\n",
+    "        })\n",
+    "        return weekly\n",
+    "    \n",
+    "    def resample_to_monthly(data):\n",
+    "        \"\"\"Resample data to monthly timeframe\"\"\"\n",
+    "        monthly = data.resample('M').agg({\n",
+    "            'Open': 'first',\n",
+    "            'High': 'max',\n",
+    "            'Low': 'min',\n",
+    "            'Close': 'last',\n",
+    "            'Volume': 'sum'\n",
+    "        })\n",
+    "        return monthly\n",
+    "    \n",
+    "    # Create different timeframes\n",
+    "    weekly_data = resample_to_weekly(data)\n",
+    "    monthly_data = resample_to_monthly(data)\n",
+    "    \n",
+    "    # Initialize visualizer\n",
+    "    visualizer = CandlestickVisualizer(data, config)\n",
+    "    \n",
+    "    # Create multi-timeframe chart if the method exists\n",
+    "    try:\n",
+    "        multi_tf_chart = visualizer.create_multi_timeframe_chart(\n",
+    "            weekly_df=weekly_data,\n",
+    "            monthly_df=monthly_data\n",
+    "        )\n",
+    "    except AttributeError:\n",
+    "        # If the method doesn't exist, create a custom implementation\n",
+    "        print(\"Creating custom multi-timeframe chart...\")\n",
+    "        \n",
+    "        multi_tf_chart = make_subplots(\n",
+    "            rows=3, cols=1,\n",
+    "            subplot_titles=(\"Daily\", \"Weekly\", \"Monthly\"),\n",
+    "            shared_xaxes=True,\n",
+    "            vertical_spacing=0.05,\n",
+    "            row_heights=[0.5, 0.25, 0.25]\n",
+    "        )\n",
+    "        \n",
+    "        # Add daily candlesticks\n",
+    "        multi_tf_chart.add_trace(\n",
+    "            go.Candlestick(\n",
+    "                x=data.index,\n",
+    "                open=data['Open'],\n",
+    "                high=data['High'],\n",
+    "                low=data['Low'],\n",
+    "                close=data['Close'],\n",
+    "                name='Daily'\n",
+    "            ),\n",
+    "            row=1, col=1\n",
+    "        )\n",
+    "        \n",
+    "        # Add weekly candlesticks\n",
+    "        multi_tf_chart.add_trace(\n",
+    "            go.Candlestick(\n",
+    "                x=weekly_data.index,\n",
+    "                open=weekly_data['Open'],\n",
+    "                high=weekly_data['High'],\n",
+    "                low=weekly_data['Low'],\n",
+    "                close=weekly_data['Close'],\n",
+    "                name='Weekly'\n",
+    "            ),\n",
+    "            row=2, col=1\n",
+    "        )\n",
+    "        \n",
+    "        # Add monthly candlesticks\n",
+    "        multi_tf_chart.add_trace(\n",
+    "            go.Candlestick(\n",
+    "                x=monthly_data.index,\n",
+    "                open=monthly_data['Open'],\n",
+    "                high=monthly_data['High'],\n",
+    "                low=monthly_data['Low'],\n",
+    "                close=monthly_data['Close'],\n",
+    "                name='Monthly'\n",
+    "            ),\n",
+    "            row=3, col=1\n",
+    "        )\n",
+    "        \n",
+    "        # Update layout\n",
+    "        multi_tf_chart.update_layout(\n",
+    "            title=\"Multi-Timeframe Analysis\",\n",
+    "            height=900,\n",
+    "            showlegend=False\n",
+    "        )\n",
+    "    \n",
+    "    # Create timeframe alignment chart\n",
+    "    alignment_chart = go.Figure()\n",
+    "    \n",
+    "    # Add daily SMA\n",
+    "    daily_sma = data['Close'].rolling(window=20).mean()\n",
+    "    alignment_chart.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=data.index,\n",
+    "            y=daily_sma,\n",
+    "            name='Daily SMA(20)',\n",
+    "            line=dict(color='blue', width=1)\n",
+    "        )\n",
+    "    )\n",
+    "    \n",
+    "    # Add weekly SMA resampled to daily\n",
+    "    weekly_sma = weekly_data['Close'].rolling(window=4).mean()\n",
+    "    weekly_sma_daily = weekly_sma.reindex(data.index, method='ffill')\n",
+    "    \n",
+    "    alignment_chart.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=data.index,\n",
+    "            y=weekly_sma_daily,\n",
+    "            name='Weekly SMA(4)',\n",
+    "            line=dict(color='red', width=2)\n",
+    "        )\n",
+    "    )\n",
+    "    \n",
+    "    # Add monthly SMA resampled to daily\n",
+    "    monthly_sma = monthly_data['Close'].rolling(window=3).mean()\n",
+    "    monthly_sma_daily = monthly_sma.reindex(data.index, method='ffill')\n",
+    "    \n",
+    "    alignment_chart.add_trace(\n",
+    "        go.Scatter(\n",
+    "            x=data.index,\n",
+    "            y=monthly_sma_daily,\n",
+    "            name='Monthly SMA(3)',\n",
+    "            line=dict(color='green', width=3)\n",
+    "        )\n",
+    "    )\n",
+    "    \n",
+    "    # Update layout\n",
+    "    alignment_chart.update_layout(\n",
+    "        title=\"Timeframe Alignment Analysis\",\n",
+    "        height=500,\n",
+    "        width=1000,\n",
+    "        showlegend=True\n",
+    "    )\n",
+    "    \n",
+    "    return {\n",
+    "        'multi_tf_chart': multi_tf_chart,\n",
+    "        'alignment_chart': alignment_chart,\n",
+    "        'timeframes': {\n",
+    "            'daily': data,\n",
+    "            'weekly': weekly_data,\n",
+    "            'monthly': monthly_data\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "# Create multi-timeframe examples\n",
+    "try:\n",
+    "    mtf_examples = create_multi_timeframe_examples(\n",
+    "        apple_data, \n",
+    "        viz_env['default_config']\n",
+    "    )\n",
+    "    \n",
+    "    # Display charts\n",
+    "    mtf_examples['multi_tf_chart'].show()\n",
+    "    mtf_examples['alignment_chart'].show()\n",
+    "    \n",
+    "    print(\"Multi-timeframe examples created successfully\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error creating multi-timeframe examples: {str(e)}\")"
+   ]
   }
  ],
  "metadata": {
